hoan thanh phan bao cao, merge bracnh_QuocAnh

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -487,15 +487,115 @@
                 <div class="chuyencantheolop">
                     <h3>Chuyên cần theo lớp</h3>
                     <span>Tình hình có mặt, vắng mặt và đi muộn</span>
+                    <table class="chuyencantheolop-table">
+                        <thead>
+                            <tr>
+                                <th>Lớp</th>
+                                <th class="comat">Có mặt</th>
+                                <th class="vang">Vắng</th>
+                                <th class="muon">Đi muộn</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1A</td>
+                                <td>33</td>
+                                <td>2</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>1B</td>
+                                <td>31</td>
+                                <td>3</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>1C</td>
+                                <td>29</td>
+                                <td>2</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>1D</td>
+                                <td>32</td>
+                                <td>1</td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td>2A</td>
+                                <td>31</td>
+                                <td>2</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>2B</td>
+                                <td>34</td>
+                                <td>1</td>
+                                <td>1</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div class="phanbohocluc">
                     <h3>Phân bố học lực</h3>
                     <span>Tỷ lệ học sinh theo từng mức học lực</span>
+                    <table class="phanbohocluc-table">
+                        <thead>
+                            <tr>
+                                <th>Xếp loại</th>
+                                <th>Tỉ lệ (%)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="gioi">
+                                <td>Giỏi</td>
+                                <td>21%</td>
+                            </tr>
+                            <tr class="kha">
+                                <td>Khá</td>
+                                <td>42%</td>
+                            </tr>
+                            <tr class="trungbinh">
+                                <td>Trung bình</td>
+                                <td>31%</td>
+                            </tr>
+                            <tr class="yeu">
+                                <td>Yếu</td>
+                                <td>6%</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <div class="xuhuongchuyencan">
                 <h3>Xu hướng chuyên cần theo tháng</h3>
                 <span>Tỷ lệ chuyên cần trung bình các tháng trong năm học</span>
+                <table class="xuhuongchuyencan-table">
+                    <thead>
+                        <tr>
+                            <th>Tháng</th>
+                            <th>Tỉ lệ chuyên cần (%)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>T9</td>
+                            <td>94%</td>
+                        </tr>
+                        <tr>
+                            <td>T10</td>
+                            <td>95%</td>
+                        </tr>
+                        <tr>
+                            <td>T11</td>
+                            <td>93%</td>
+                        </tr>
+                        <tr>
+                            <td>T12</td>
+                            <td>94%</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             <div class="baocaochitiet">
                 <h3>Báo cáo chi tiết theo lớp</h3>
