Bổ sung menu,giao dienj điểm danh,giao diện sức khỏe

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -119,7 +119,7 @@
         </div>
     </div>
 <!-----------------Diem Danh------------------->
-    <div id="DieDanh" style="display: block;">
+    <div id="DieDanh" style="display: none;">
         <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="/img/user (1).png" alt=""><span></span>Điểm danh học sinh</h3>
         <span style="color: gray;">Ghi nhận tình hình chuyên cần hàng ngày</span>
         <div id="ChonLop">
@@ -139,7 +139,7 @@
         </div>
 
         <div id="TSDiemDanh">
-            <div id="CoMat" style="background-color:#D8F6E0;">
+            <div id="CoMatDD" style="background-color:#D8F6E0;">
                 <span style="font-weight: bold;font-size: 60pt;color: green;">0</span><br>
                 <span style="color: green;">Có mặt</span>
             </div>
@@ -260,11 +260,14 @@
         <button id="btnLuuDiemDanh"> <i class="fa-solid fa-floppy-disk"></i><span>Lưu điểm danh</span></button>
     </div>
 
-    <div id="SucKhoe" style="display: block;"></div>
+    <div id="SucKhoe" style="display: none;">
+        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="/img/heart.png" alt=""><span></span>Quản lý sức khỏe và dinh dưỡng</h3>
+        <span style="color: gray;">Ghi chú tình hình sức khỏe và chế độ ăn học sinh</span>
+    </div>
 
-    <div id="DiemSo" style="display: block;"></div>
+    <div id="DiemSo" style="display: none;"></div>
 
-    <div id="LienLac" style="display: block;"></div>
+    <div id="LienLac" style="display: none;"></div>
 
     <script src="jvGV.js"></script>
 </body>
