--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -110,6 +110,57 @@
                     <button class="add-btn"><i class="fa-solid fa-plus"></i>Thêm học sinh</button>
                 </div>
             </div>
+            <!-- Form thêm học sinh -->
+            <div class="overlay" id="overlay"></div>
+
+            <div class="modal" id="studentModal">
+                <div class="modal-header">
+                    <h2>Thêm học sinh mới</h2>
+                    <span class="close-btn" id="closeBtn">&times;</span>
+                </div>
+                <p class="modal-desc">Nhập thông tin học sinh vào form bên dưới.</p>
+
+                <form class="student-form">
+                    <div class="form-group">
+                        <label>Họ tên</label>
+                        <input type="text" placeholder="">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Lớp</label>
+                        <select>
+                            <option>Chọn lớp</option>
+                            <option>1A</option>
+                            <option>1B</option>
+                            <option>2A</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Ngày sinh</label>
+                        <input style="color: rgb(91, 91, 91);" type="date">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Phụ huynh</label>
+                        <input type="text" placeholder="">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Số điện thoại</label>
+                        <input type="text" placeholder="">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Địa chỉ</label>
+                        <input type="text" placeholder="">
+                    </div>
+
+                    <div class="form-footer">
+                        <button type="submit" class="submit-btn">Thêm mới</button>
+                    </div>
+                </form>
+            </div>
 
             <table class="student-table">
                 <thead>
