--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -234,7 +234,7 @@
                         <td>Hà Nội</td>
                         <td><span class="status active">Đang học</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
                             <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                     </tr>
@@ -247,7 +247,7 @@
                         <td>Hà Nội</td>
                         <td><span class="status active">Đang học</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
                             <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                     </tr>
@@ -260,7 +260,7 @@
                         <td>Hà Nội</td>
                         <td><span class="status active">Đang học</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
                             <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                     </tr>
@@ -273,7 +273,7 @@
                         <td>Hà Nội</td>
                         <td><span class="status active">Đang học</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
                             <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                     </tr>
@@ -286,7 +286,7 @@
                         <td>Hà Nội</td>
                         <td><span class="status active">Đang học</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editStudent"><i class="fa-solid fa-pen-to-square"></i></button>
                             <button class="delete"><i class="fa-solid fa-trash-can"></i></button>
                         </td>
                     </tr>
@@ -328,7 +328,7 @@
                         <td>A101</td>
                         <td><span class="status activeclass">Hoạt động</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
                         </td>
                     </tr>
                     <tr>
@@ -339,7 +339,7 @@
                         <td>A102</td>
                         <td><span class="status activeclass">Hoạt động</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
                         </td>
                     </tr>
                     <tr>
@@ -350,7 +350,7 @@
                         <td>A103</td>
                         <td><span class="status activeclass">Hoạt động</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
                         </td>
                     </tr>
                     <tr>
@@ -361,12 +361,107 @@
                         <td>B101</td>
                         <td><span class="status activeclass">Hoạt động</span></td>
                         <td class="actions">
-                            <button class="edit"><i class="fa-solid fa-pen-to-square"></i></button>
+                            <button class="edit editClass"><i class="fa-solid fa-pen-to-square"></i></button>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </section>
+        <div class="overplayclass" id="overplayclass"></div>
+        <div class="modal" id="classModal">
+            <div class="modal-header">
+                <h2>Tạo lớp mới</h2>
+                <span class="close-btn" id="closeClassBtn">&times;</span>
+            </div>
+            <p class="modal-desc">Nhập thông tin lớp học vào form bên dưới.</p>
+
+            <form class="class-form">
+                <div class="form-group">
+                    <label>Tên lớp</label>
+                    <input type="text" placeholder="">
+                </div>
+
+                <div class="form-group">
+                    <label>Khối</label>
+                    <select>
+                        <option>Chọn khối</option>
+                        <option>Khối 1</option>
+                        <option>Khối 2</option>
+                        <option>Khối 3</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>GVCN</label>
+                    <select>
+                        <option>Chọn giáo viên</option>
+                        <option>Nguyễn Văn A</option>
+                        <option>Trần Thị B</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Sĩ số tối đa</label>
+                    <input type="number" value="35">
+                </div>
+
+                <div class="form-group">
+                    <label>Phòng học</label>
+                    <input type="text" placeholder="">
+                </div>
+
+                <div class="form-footer">
+                    <button type="submit" class="submitClass-btn">Thêm mới</button>
+                </div>
+            </form>
+        </div>
+        <div class="modal" id="classModalUpdate">
+            <div class="modal-header">
+                <h2>Sửa thông tin lớp</h2>
+                <span class="close-btn" id="closeClassBtnUpdate">&times;</span>
+            </div>
+            <p class="modal-desc">Nhập thông tin lớp học vào form bên dưới.</p>
+
+            <form class="class-form">
+                <div class="form-group">
+                    <label>Tên lớp</label>
+                    <input type="text" placeholder="">
+                </div>
+
+                <div class="form-group">
+                    <label>Khối</label>
+                    <select>
+                        <option>Chọn khối</option>
+                        <option>Khối 1</option>
+                        <option>Khối 2</option>
+                        <option>Khối 3</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>GVCN</label>
+                    <select>
+                        <option>Chọn giáo viên</option>
+                        <option>Nguyễn Văn A</option>
+                        <option>Trần Thị B</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Sĩ số tối đa</label>
+                    <input type="number" value="35">
+                </div>
+
+                <div class="form-group">
+                    <label>Phòng học</label>
+                    <input type="text" placeholder="">
+                </div>
+
+                <div class="form-footer">
+                    <button type="submit" class="submitClassUpdate-btn">Cập nhật</button>
+                </div>
+            </form>
+        </div>
         <section id="teacher" class="page">
             <div class="class-header">
                 <h3>Quản lý giáo viên</h3>
